# trafic_fines

./: .coverage  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
notebooks/: analisis_exploratorio.ipynb  ejemplos_uso.ipynb
src/traficFines/: __init__.py
src/traficFines/cache/: __init__.py  cache.py  cache_error.py  cache_url.py
src/traficFines/madridFines/: __init__.py  madrid_fines.py  rdf_parser.py
tests/: test_cache.py  test_cache_url.py  test_madridFines.py
tests/test_files/: metadata.rdf  metadata_fake.rdf  multas_abril_2024.csv  multas_agosto_2024.csv  multas_diciembre_2024.csv  multas_enero_2024.csv  multas_febrero_2024.csv  multas_julio_2024.csv  multas_junio_2024.csv  multas_marzo_2024.csv  multas_mayo_2024.csv  multas_noviembre_2024.csv  multas_octubre_2024.csv  multas_septiembre_2024.csv
