[project]
name = "tarea"
version = "0.0.1"
authors = [
	{ name="Alejandro de Cora", email="alejandrodecora@gmail.com" },
]
description = "Master Big Data, & Data Engineering, tarea"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
]
license = "MIT"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "numpy>=2.4.4",
    "wordcloud>=1.9.6",
]
