[project]
name = "traficFines"
version = "0.0.1"
authors = [
	{ name="Alejandro de Cora", email="alejandrodecora@gmail.com" },
]
description = "Master Big Data, & Data Engineering, trafic fines package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "requests>=2.33.1",
]
license = "MIT"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "numpy>=2.4.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "responses>=0.26.0",
    "wordcloud>=1.9.6",
]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "src"
addopts = "--verbose --cov=traficFines.cache --cov-report html"
